fix navbar overlapp footer and add template for page

--- a/src/components/ContentWrapper/ContentWrapper.module.sass
+++ b/src/components/ContentWrapper/ContentWrapper.module.sass
@@ -5,11 +5,13 @@
     height: 100%
     width: 60%
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset
+    overflow: auto
 
 @media screen and (max-width: 768px) 
     .contentWrapper 
         width: 100%
-        margin: auto
         height: 100%
         box-shadow: none
+        margin-bottom: 5rem
         background-color: transparent
+        overflow: visible
